Vote buttons no longer have their control-area and vote-controls wrapper divs and are abs positioned with a z-index

--- a/app/assets/stylesheets/_bounty-list.css.sass
+++ b/app/assets/stylesheets/_bounty-list.css.sass
@@ -44,23 +44,13 @@
       margin: 5%
       max-height: 35%
 
-    .control-area
-      position: absolute
-      bottom: 0
-      left: 0
-      width: 100%
-      height: 30%
-      min-height: 30%
-      text-align: center
-
-    .vote-controls
-      margin-top: 5%
-      margin-right: 5%
-      display: inline-block
-
     .upvote
       height: 44px
       width: 44px
+      position: absolute
+      z-index: 3
+      bottom: 0px
+      right: 44px
       background-image: url('VoteUpB.png')
       background-repeat: no-repeat
       background-position: center
@@ -72,10 +62,13 @@
     .upvote-grey
       background-image: url('VoteUpG.png')
 
-
     .downvote
       height: 44px
       width: 44px
+      position: absolute
+      z-index: 3
+      bottom: 0px
+      right: 0px
       background-image: url('VoteDownB.png')
       background-repeat: no-repeat
       background-position: center
